--- a/snake/snake.html
+++ b/snake/snake.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>打砖块</title>
+	<title>贪吃蛇</title>
 </head>
 <style>
 	#map {
