代码目录结构修改

--- a/astar/index.html
+++ b/astar/index.html
@@ -27,9 +27,9 @@
 	</div>
 	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 	<script src="../class.js"></script>
-	<script src="../listset.js"></script>
-	<script src="../grid.js"></script>
-	<script src="../finder-astar.js"></script>
+	<script src="js//listset.js"></script>
+	<script src="js/grid.js"></script>
+	<script src="js/finder-astar.js"></script>
 	<script>
 		var canvas = document.getElementById('canvas');
 		var ctx = canvas.getContext('2d');
